# clauson

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/workflows/: ci.yml  claude.yml
docs/: tool-events-format.md
docs/plans/: 2026-02-22-clauson-design.md  2026-02-22-clauson-implementation.md  2026-02-25-tool-events-design.md  2026-02-25-tool-events-impl.md  2026-02-25-tool-events-test-plan.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  log-tool-event.sh
src/: main.rs
src/cli/: blocks.rs  mod.rs  output.rs  stats.rs  tokens.rs  tool_events.rs  tools.rs  turns.rs
src/model/: block.rs  mod.rs  session.rs  tool_event.rs  turn.rs  types.rs
src/parser/: mod.rs  raw.rs  tool_events.rs  transform.rs
testdata/: 058c4c27-07c1-4f93-86c1-317a4faa9803.jsonl  15272057-5296-4b76-a119-e4af992a70e0.jsonl  421d2e3a-f3d7-4c79-9e04-459471305d6f.jsonl  6577be84-6784-4198-b13e-25baaaa2e1d2.jsonl  7007e87f-c87d-47d8-b05b-21d903656132.jsonl  e998eca1-e455-49e8-86fb-bbfbc88f74f0.jsonl  f4f38a6b-a385-4732-916a-0312b9455d5f.jsonl  test-session-real-format.jsonl  test-session-real-format.tool-events.jsonl  test-session.jsonl  test-session.tool-events.jsonl
testdata/f1cf0635-ee0f-4598-b5f5-1b9d05802a9c/subagents/: agent-a4e80a2.jsonl  agent-a97b8a5.jsonl  agent-aa3a7fb.jsonl  agent-ab3c815.jsonl  agent-acompact-6bdef1.jsonl  agent-afe74d3.jsonl
tests/: cli_tests.rs  real_data.rs
